pkg/controller/networkpolicy/testdata/networkpolicy/builder/existing.yaml
apiVersion: v1
kind: Node
metadata:
  name: existing-node
spec:
  podCIDR: 10.42.0.0/24
  podCIDRs:
    - 10.42.0.0/24
