pkg/controller/networkpolicy/testdata/networkpolicy/builder/input.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildkitd
  namespace: acorn-image-system
spec:
  template:
    metadata:
      labels:
        app: buildkitd
        another: label
