pkg/controller/networkpolicy/testdata/networkpolicy/builder/expected.golden
`apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    acorn.io/managed: "true"
  name: buildkitd
  namespace: acorn-image-system
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: acorn-system
      podSelector:
        matchLabels:
          app: acorn-api
  podSelector:
    matchLabels:
      another: label
      app: buildkitd
  policyTypes:
  - Ingress
`
