pkg/controller/networkpolicy/testdata/networkpolicy/builder/expected.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: buildkitd
  namespace: acorn-image-system
  labels:
    acorn.io/managed: "true"
spec:
  podSelector:
    matchLabels:
      app: buildkitd
      another: label
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: acorn-system
          podSelector:
            matchLabels:
              app: acorn-api
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.42.0.0/24
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
        - podSelector:
            matchLabels:
              app: registry
  policyTypes:
  - Ingress
  - Egress
